--- a/devconnector/resources/html/profiles.html
+++ b/devconnector/resources/html/profiles.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <nav>
-      <a href="https://www.google.com">DevConnector</a>
-      <a href="profiles.html">Developers</a>
-      <a href="signup.html">Signup</a>
-      <a href="signin.html">SignIn</a>
+      <a class="btn" href="index.html">DevConnector</a>
+      <a class="btn" href="profiles.html">Developers</a>
+      <a class="btn" href="signup.html">Signup</a>
+      <a class="btn" href="signin.html">SignIn</a>
     </nav>
     <h1>Welcome to profiles</h1>
     <footer>copyright &copy; 2022 KnowlegHut.com</footer>
