--- a/devconnector/resources/html/signup.html
+++ b/devconnector/resources/html/signup.html
@@ -12,7 +12,7 @@
       <a class="btn" href="signup.html">Signup</a>
       <a class="btn" href="signin.html">SignIn</a>
     </nav>
-    <section>
+    <section class="container">
       <h1>Sign Up</h1>
       <p>Create Your Profile</p>
       <form>
