--- a/devconnector/resources/html/index.html
+++ b/devconnector/resources/html/index.html
@@ -17,7 +17,7 @@
       Create a developer profile/portfolio, share posts and get help from other
       developers
     </p>
-    <div>
+    <div class="container">
       <a href="signup.html">Signup</a>
       <a href="signin.html">SignIn</a>
     </div>
